Updated the code in the staged files in terms of the desktop design and currently working on the mobile design specifically aligning the image on top of the container content

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
       </nav>
     </header>
     <main class="container">
-      <div>
+      <div class="container__content">
         <small>
           <span class="badge">New</span>
           <span class="spaced-text">Monograph Dashboard</span>
         </small>
-        <h1 class="title">Powerful insights into your team</h1>
-        <p class="subtitle">Project planning and time tracking for agile teams</p>
-        <div class="flex-container">
-          <div><a class="btn" href="#">Schedule a demo</a></div>
+        <h1 class="container__title">Powerful insights into your team</h1>
+        <p class="container__subtitle">Project planning and time tracking for agile teams</p>
+        <div class="container__flex">
+          <div><a class="container__flex__btn" href="#">Schedule a demo</a></div>
           <div>
             <p class="text-disabled spaced-text">to see a preview</p>
           </div>
