Finished the desktop version working on the mobile version

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <li class="navbar__navlinks__link">Pricing</li>
           <li class="navbar__navlinks__link disabled">Login</li>
         </ul>
+        <div><img src="./images/icon-hamburger.svg" alt=""></div>
       </nav>
     </header>
     <main class="container">
